# hoodcollege

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  daily-pipeline.yml  pages.yml  weekly-pipeline.yml
data/: hood_people.db
data/audits/: role-audit-2026-04-30.md
data/connections/: 2026-03-20.md  2026-03-22.md  2026-03-29.md  2026-04-05.md  2026-04-12.md  2026-04-19.md  2026-04-26.md  2026-05-03.md  2026-05-10.md  2026-05-17.md  2026-05-24.md  2026-05-31.md  2026-06-07.md  2026-06-14.md  2026-06-21.md  2026-06-28.md  2026-07-05.md  2026-07-12.md  2026-07-19.md
data/directory/: faculty-staff-directory.md
data/discoveries/: 2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  (+109 more)
docs/: architecture.md  data-model.md  getting-started.md  operations.md  project-plan.md  source-strategy.md
sources/: hood_sources.json
tests/: test_connection_writer.py  test_daily_run.py  test_disambiguator.py  test_faculty_directory.py  test_feed_reader.py  test_hood_site_reader.py  test_http_fetcher.py  test_markdown_writer.py  test_monthly_run.py  test_pages_writer.py  test_people_extractor.py  test_social_network_analysis.py  test_sqlite_role_precedence.py  test_summary_writer.py  test_weekly_run.py
(+53 files in other folders)
