[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hood-college-signal-atlas"
version = "0.1.0"
description = "Daily intelligence pipeline for Hood College in Frederick, Maryland."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "requests>=2.32",
]

[project.scripts]
hood-pipeline = "hood_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
